tests/errors/err2.js
module.exports = {
    'works': function (browser) {
        //browser.assert.ok(true);
        console.log('err2 works');
    },
    //after: function (browser) { browser.end(); }
};